--- a/PUNTO2/Style.css
+++ b/PUNTO2/Style.css
@@ -111,3 +111,16 @@ p{
     height: 200px;
 }
 
+
+a{
+    font-family: "Open Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 800;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+
+      margin:0px;
+
+      text-decoration: none;
+}
