--- a/cicloDeVida/estilos.css
+++ b/cicloDeVida/estilos.css
@@ -2,7 +2,7 @@ body {
   font-family: "Inter", sans-serif;
   margin: 0;
   background: linear-gradient(to right, #dce2f1, #dfdfeb);
-  color: #333;
+  background-color: #DAD2FF90;
 }
 
 .container {
@@ -25,11 +25,36 @@ img {
 }
 
 h1 {
-  color: #e93ec4;
-  font-weight: 600;
-  font-size: 50px;
-  font-family: "Courier New", Courier, monospace;
-  font: weight 1000px;
+  
+  font-family: "Vibur", cursive;
+  font-weight: 400;
+  font-style: normal;
+
+  font-size: 200px;
+  color: #493d9e;
+  margin: 0px;
+
+
+  
+}
+
+
+
+
+
+.tituloCronoClase{
+
+
+  font-family: "Vibur", cursive;
+  font-weight: 400;
+  font-style: normal;
+
+  
+  color: #493d9e;
+  margin: 10px;
+  
+
+
 }
 
 h2 {
@@ -37,24 +62,9 @@ h2 {
   margin: 10px 0 10;
 }
 
-.enlaces {
-  /* display: flex;
-  gap: 16px;
-  margin-top: 20px; */
-}
 
-.social a {
-  /* text-decoration: none;
-  color: #333;
-  font-size: 20px;
-  background: #fff;
-  border-radius: 50%;
-  padding: 12px;
-  padding-top: 2rem;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-  justify-items: center;
-  margin: 5px; */
-}
+
+
 
 a img {
   height: 40px;
@@ -69,6 +79,21 @@ a imag:hover {
   max-width: 1200px;
   margin: 40px auto;
   padding: 0 20px;
+
+
+  text-align: center;
+
+
+  font-family: "Rhodium Libre", serif;
+  font-weight: 400;
+  font-style: normal;
+
+  font-weight: bold;
+
+
+
+
+
 }
 
 .contenedor-tarjetas {
@@ -80,7 +105,8 @@ a imag:hover {
 }
 
 .tarjetas {
-  background-color: white;
+  background-color: #FFF2AF85;
+  border: 2px solid #493d9e;
   width: 300px;
   padding: 20px;
   border-radius: 15px;
@@ -91,7 +117,7 @@ a imag:hover {
 }
 
 .tarjetas:hover {
-  background-color: #7a828086;
+  background-color: #B2A5FF;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -114,3 +140,77 @@ a imag:hover {
   font-size: 16px;
   color: #3a3939;
 }
+
+
+.nav-pills {
+  --bs-nav-pills-border-radius: var(--bs-border-radius);
+  --bs-nav-pills-link-active-color: #fff;
+  --bs-nav-pills-link-active-bg: #B2A5FF;
+}
+
+
+.navCronoClase{
+
+
+  
+  font-family: "Rhodium Libre", serif;
+  font-weight: 400;
+  font-style: normal;
+
+  color: #493d9e;
+  font-weight: bold;
+
+
+}
+
+.navCronoClase>*{
+
+  border: 2px solid #493d9e;
+  padding: 3px;
+}
+
+.headerCronoclase{
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+
+h2{
+
+  text-align: center;
+
+
+  font-family: "Rhodium Libre", serif;
+  font-weight: 400;
+  font-style: normal;
+
+  color: #493d9e;
+  font-weight: bold;
+
+
+}
+
+
+.tarjetas>img{
+
+  border:2px solid #493d9e;
+  border-radius: 50%;
+}
+
+.clockCronoClase{
+
+  border-radius: 50%;
+  height: 150px;
+  width: 150px;
+
+
+}
+
+
+
+
+
