--- a/planificacion/estilosPlanificacion.css
+++ b/planificacion/estilosPlanificacion.css
@@ -1,8 +1,8 @@
 body {
   font-family: "Inter", sans-serif;
   margin: 0;
-  background: linear-gradient(to right, #dce2f1, #dfdfeb);
-  color: #333;
+  background-color: #DAD2FF90;
+  
 }
 
 .container {
