--- a/analisisRequisitos/estilosAnalisis.css
+++ b/analisisRequisitos/estilosAnalisis.css
@@ -2,7 +2,7 @@ body {
   font-family: "Inter", sans-serif;
   margin: 0;
   background: linear-gradient(to right, #dce2f1, #dfdfeb);
-  color: #333;
+  background-color: #DAD2FF90;
 }
 
 .container {
@@ -24,6 +24,21 @@ img {
   flex: 2;
 }
 
+h2 {
+  font-size: 70px;
+  margin: 10px 0 10;
+
+
+  font-family: "Rhodium Libre", serif;
+  font-weight: 400;
+  font-style: normal;
+
+  color: #493d9e;
+  font-weight: bold;
+
+
+}
+
 h1 {
   color: #e93ec4;
   font-weight: 600;
@@ -32,19 +47,14 @@ h1 {
   font: weight 1000px;
 }
 
-h2 {
-  font-size: 40px;
-  margin: 10px 0 10;
-}
+
 
 a img {
   height: 40px;
   width: 40px;
   margin: 10px;
 }
-a imag:hover {
-  transform: scale(1.1);
-}
+
 
 .etapas {
   max-width: 1200px;
@@ -62,35 +72,240 @@ a imag:hover {
 }
 
 .tarjetas {
-  flex-direction: ;
-  background-color: white;
+  background-color: #FFF2AF85;
+  border: 2px solid #493d9e;
   width: 90%;
   border-radius: 15px;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  
   text-align: left;
   padding-left: 30px;
   padding-top: 10px;
 }
 
 .tarjetas img {
-  width: 100px;
-  height: 10px;
+  width: 80px;
+  height: 80px;
   margin-bottom: 10px;
 }
 
 .tarjetas h3 {
   margin: 10px 0 5px;
-  font-size: 23px;
-  color: #333;
+  font-size: 50px;
+ 
   text-align: left;
+
+  font-family: "Rhodium Libre", serif;
+  font-weight: 400;
+  font-style: normal;
+
+  color: #493d9e;
+  font-weight: bold;
 }
 
 .tarjetas ul li {
+
+  text-align: left;
+  
+  font-family: "Rhodium Libre", serif;
+  font-weight: 400;
+  font-style: normal;
+
+  color: black;
+  font-weight: bold;
   font-size: 20px;
-  color: #3a3939;
-  margin-left: 20px;
-  margin-top: 10px;
-  padding: 10px;
+
+
+
 }
+
+
+
+
+.nav-pills {
+  --bs-nav-pills-border-radius: var(--bs-border-radius);
+  --bs-nav-pills-link-active-color: #fff;
+  --bs-nav-pills-link-active-bg: #B2A5FF;
+}
+
+
+.navCronoClase{
+
+
+  
+  font-family: "Rhodium Libre", serif;
+  font-weight: 400;
+  font-style: normal;
+
+  color: #493d9e;
+  font-weight: bold;
+
+
+}
+
+.navCronoClase>*{
+
+  border: 2px solid #493d9e;
+  padding: 3px;
+}
+
+
+.headerCronoclase{
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  
+
+
+  
+}
+
+h1{  font-family: "Vibur", cursive;
+  font-weight: 400;
+  font-style: normal;
+
+  font-size: 200px;
+  color: #493d9e;
+  margin: 0px;
+
+
+}
+
+
+  .clockCronoClase{
+
+    border-radius: 50%;
+    height: 150px;
+    width: 150px;
+  
+  
+  }
+
+  h2 {
+    font-size: 70px;
+    margin: 10px 0 10;
+  
+  
+    font-family: "Rhodium Libre", serif;
+    font-weight: 400;
+    font-style: normal;
+  
+    color: #493d9e;
+    font-weight: bold;
+  
+  
+  }
+
+
+
+  
+
+  .ViabRieCronoClase{
+
+    display:flex;
+    justify-content: center;
+    margin: 10px;
+    
+    width: 90%;
+    
+    
+    
+  }
+
+  .viabilidadCronoClase{
+
+    display: flex;
+    flex-direction: column;
+    
+    border-radius: 15px;
+    align-items: center;
+    padding: 10px;
+
+    background-color: #FFF2AF85;
+    border: 2px solid #493d9e;
+    margin: 5px;
+
+    
+    
+  }
+
+
+  h3 img{
+
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 2px solid #493d9e;
+  }
+
+
+  h3{
+
+    font-size: 50px;
+ 
+    text-align: left;
+  
+    font-family: "Rhodium Libre", serif;
+    font-weight: 400;
+    font-style: normal;
+  
+    color: #493d9e;
+    font-weight: bold;
+  }
+
+  .ViabRieCronoClase li{
+
+ 
+ 
+    text-align: left;
+  
+    font-family: "Rhodium Libre", serif;
+    font-weight: 400;
+    font-style: normal;
+  
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
+    list-style-type: none;
+
+
+    
+  }
+
+
+  .ViabRieCronoClase li::before {
+    
+
+
+    content: '✔️';
+    
+   
+    
+  
+  }
+
+
+
+  .titulosCicloDeVida{
+
+    display: flex;
+    
+  }
+
+
+  .titulosCicloDeVida img{
+
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 2px solid #493d9e;
+
+    
+  }
+
+
+
