--- a/scrum/style.css
+++ b/scrum/style.css
@@ -165,8 +165,10 @@ a img {
 }
 
 .DailySprint{
-    background-color: #FFE0B290;
+    
     grid-column: span 19;
+
+    background-color: #FFE0B290;
 
     display: flex;
     align-items: center;
@@ -273,7 +275,7 @@ SPRINT 1
     
     gap:1rem;
 
-    border: 2px solid;
+ 
 
 
 
@@ -281,8 +283,115 @@ SPRINT 1
 }
 
 
-.MaincalendarS1>*{ 
 
-    border:2px solid;
+
+
+.DailySprint2{
+
+    grid-column: span 13;
+      background-color: #FFE0B290;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: "Rhodium Libre", serif;
+    font-weight: 400;
+    font-style: normal;
+
 }
 
+
+/*___________________________________________*/
+
+
+.AllSprints{
+
+    display: flex;
+    width: 100%;
+    height: 45rem;
+  
+    
+}
+
+.AllSprints>*{
+
+    width: 30%;
+    border: 5px solid #493d9e;
+    border-radius: 20px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 30px;
+    background-color: #FFE0B290;
+
+    
+}
+
+
+
+.AllSprints>*>*{
+
+    border: 7px dotted #493d9e;
+    border-radius: 20px;
+    margin: 3rem;
+    width: 80%;
+    padding: 10px;
+    
+
+    
+}
+
+
+.AllSprints h1{
+
+    font-family: "Vibur", cursive;
+    font-weight: 400;
+    font-style: normal;
+
+    font-size: 70px;
+    color: #493d9e;
+    font-weight: bold;
+
+
+}
+
+.AllSprints h2{
+
+    color: #493d9e;
+    font-family: "Rhodium Libre", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 40px;
+
+
+
+}
+
+.AllSprints h4{
+
+    border: none;
+    font-family: "Rhodium Libre", serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 30px;
+   
+
+}
+
+.AllSprintsTitle{
+
+    background-color: #DAD2FF90;
+    text-decoration: none;
+}
+
+
+.AllSprintsTitle:hover{
+
+    
+    background-color: #B2A5FF;
+
+
+    
+}
