--- a/desarrollo/estilosDesarrollo.css
+++ b/desarrollo/estilosDesarrollo.css
@@ -50,3 +50,25 @@
 
     margin-bottom: 0px;
 }
+
+.tarjetas p{
+
+    text-align: left;
+    font-family: "Rhodium Libre", serif;
+    font-weight: 400;
+    font-style: normal;
+    color: black;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+
+.Integracion li{
+
+      list-style-type: none;
+}
+
+.Integracion li::before{
+
+    content: "✔️";
+}
