--- a/diseño/estilo.css
+++ b/diseño/estilo.css
@@ -30,6 +30,51 @@ body{
         width: 60%;
     
 }*/
+ .navCalendar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+            margin-bottom: 2rem;
+            width: 100%;
+            background-color: #B2A5FF;
+            height: 5rem;
+            position: fixed;
+            top: 0;
+            left: 0;
+            flex-direction: row-reverse;
+        }
+
+        .nav-buttons {
+            display: flex;
+            gap: 20px;
+        }
+
+        .nav-button {
+            display: flex;
+            align-items: center;
+            padding: 8px 16px;
+            background-color: #F8F4FF;
+            border: 2px solid #493d9e;
+            border-radius: 20px;
+            color: #493d9e;
+            text-decoration: none;
+            font-weight: bold;
+            transition: all 0.3s ease;
+        }
+
+        .nav-button img {
+            width: 24px;
+            height: 24px;
+            margin-right: 8px;
+      
+        }
+
+        .nav-button:hover {
+            background-color: #493d9e;
+            color: #FFF2AF;
+            transform: translateY(-2px);
+        }
 
 
 body{
